const user = require('../Classes/user')
const Scooter = require('../Classes/Scooter')

/**
 * Create Class Charging Station
 * 
 */

class chargingStation{

    /**
     * Creates a static variable for all scooter
     */
    static allScooter = []

    /**
     * Creates a costructor
     */

    constructor(){
     
    }

/**
 * Used to charge the scooter battery
*/
 //charge(){}

 /**
  * Method to hire a scooter
  * Charges the user 5£
  */
 
  hire(){
    user.myScooters.push()
  }
 
  /**
   * Method to add money into bank vault
   * 
   */
 // dBag()
 
 
  /**
   * Method to check quality of scooter
   */
 // check()
 
}
module.exports = chargingStation

