/**
 * Creates a class User
 * Represents who buys the scooter
 */
const Scooter = require("../Classes/chargingStation")

class user{
    /**
     * Creates a static array of scooter owned by user
     */
    static myScooters = []


     /**
      * Creates a constructor
      * @param {number} age
      * @param {number} account
      * @param {string} name
      */
     constructor(){

     }

/**
 * Creates Method
 * checks user balance
 */

balance(){}

/**
 * Creates Method to represent users ride
 */
ride(){}

/**
 * Creates Method to show out of users inspection
 */
inspect(){}

/**
 * creates Method to represent user returning scooter
 */
restore(){}

}
module.exports = user